syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto.service";

import "rpc_common.proto";
/**
 * Protobuf definitions for the Remote Corfu Table server RPCs. These
 * include request and response payloads for: GET, MULTIGET, SCAN, CONTAINS_KEY, CONTAINS_VALUE, and SIZE.
 */
message RemoteCorfuTableGetRequestMsg {
 bytes versionedKey = 1;
}

message RemoteCorfuTableGetResponseMsg {
  bytes payloadValue = 1;
}

message RemoteCorfuTableMultiGetRequestMsg {
  repeated bytes versionedKeys = 1;
}

message RemoteCorfuTableEntriesResponseMsg {
  repeated RemoteCorfuTableEntryMsg entries = 1;
}

message RemoteCorfuTableScanRequestMsg {
  uint32 numEntriesToScan = 1;
  bytes versionedStartKey = 2;
}

message RemoteCorfuTableContainsKeyRequestMsg {
  bytes versionedKey = 1;
}

message RemoteCorfuTableContainsResponseMsg {
  bool contains = 1;
}

message RemoteCorfuTableContainsValueRequestMsg {
  bytes payloadValue = 1;
  uint32 internalScanSize = 2;
}

message RemoteCorfuTableSizeRequestMsg {
  uint32 internalScanSize = 1;
}

message RemoteCorfuTableSizeResponseMsg {
  uint32 size = 1;
}

message RemoteCorfuTableEntryMsg {
  bytes versionedKey = 1;
  bytes payloadValue = 2;
}

//message container holding all remote corfu table requests
message RemoteCorfuTableRequestMsg {
  UuidMsg streamId = 1;
  uint64 timestamp = 2;
  oneof payload {
    RemoteCorfuTableGetRequestMsg get = 3;
    RemoteCorfuTableScanRequestMsg scan = 4;
    RemoteCorfuTableContainsKeyRequestMsg contains_key = 5;
    RemoteCorfuTableContainsValueRequestMsg contains_value = 6;
    RemoteCorfuTableSizeRequestMsg size = 7;
    RemoteCorfuTableMultiGetRequestMsg multiget = 8;
  }
}

message RemoteCorfuTableResponseMsg {
  oneof payload {
    RemoteCorfuTableGetResponseMsg get_response = 1;
    RemoteCorfuTableEntriesResponseMsg entries_response = 2;
    RemoteCorfuTableContainsResponseMsg contains_response = 3;
    RemoteCorfuTableSizeResponseMsg size_response = 4;
  }
}